//BAD!!! DON'T START NAMES WITH NEW OR COPY

import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "ChatProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message PrivateChatPostProto {
	optional string privateChatPostUuid = 1;
	optional MinimumUserProtoWithLevel poster = 2;
	optional MinimumUserProtoWithLevel recipient = 3;
	optional int64 timeOfPost = 4;
	optional string content = 5;
}

//------------------------------------------------------------------------------------------

message ColorProto {
	optional int32 red = 1;
	optional int32 green = 2;
	optional int32 blue = 3;
}

//-----------------------------------------------------------------------------------------

message GroupChatMessageProto {
	optional MinimumUserProtoWithLevel sender = 1;
	optional int64 timeOfChat = 2;
	optional string content = 3;
	repeated TranslatedTextProto translatedContent = 4;
	optional bool isAdmin = 5;
	optional string chatUuid = 6;
}

//-------------------------------------------------------------------------------------

enum GroupChatScope {
	CLAN = 1;
	GLOBAL = 2;
}

//------------------------------------------------------------------------------------------

message ChatTranslationsProto {
	optional string chatTranslationId = 1;
	optional ChatType chatType = 2;
	optional string chatId = 3;
	optional TranslateLanguages language = 4;
	optional string text = 5;
}

//-------------------------------------------------------------------------------------

enum ChatType {
	CLAN_CHAT = 1;
	PRIVATE_CHAT = 2;
}

//-------------------------------------------------------------------------------------

enum TranslateLanguages {
	ARABIC = 1;
	CHINESE_SIMPLIFIED = 2;
	CHINESE_TRADITIONAL = 3;
	ENGLISH = 4;
	FRENCH = 5;
	GERMAN = 6;
	SPANISH = 7;
}

//-------------------------------------------------------------------------------------

message TranslatedTextProto {
	optional TranslateLanguages language = 1;
	optional string text = 2;

}



